--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav ul li a:hover {
 }
 
 #login_btn:hover {
-    box-shadow: -5px 5px black;
+    background: var(--main-gray);
 }
 
 .skip-to-main-content-link {
@@ -122,7 +122,7 @@ nav ul li a:hover {
     left: -9999px;
     z-index: 999;
     padding: 1em;
-    background-color: black;
+    background-color: var(--main-black);
     color: var(--main-white);
     opacity: 0;
 }
@@ -158,6 +158,7 @@ nav ul li a:hover {
     font-size: 1em;
     border-radius: .5rem;
     font-weight: bold;
+    border: none;
 }
 
 #help_btn a {
@@ -165,8 +166,7 @@ nav ul li a:hover {
 }
 
 #help_btn:hover {
-    box-shadow: -5px 5px black;
-    border: none;
+    background: var(--main-gray);
 }
 
 
@@ -182,9 +182,9 @@ footer > span {
 
 
 
-@media screen and (max-width: 300px){
+@media screen and (max-width: 530px){
     body {
-        grid-template-rows: 50px 1fr 50px;
+        grid-template-rows: 125px 1fr 100px;
         grid-template-columns: 1fr;
         grid-template-areas: 
         "head"
@@ -193,7 +193,7 @@ footer > span {
     }
 
     .introduction-text, .vision-text, .the-problem-text, .features-text, .contact-text, .help-text {
-        font-size: 1.3rem;
+        font-size: 1rem;
         margin-top: .4rem;
     }
 
@@ -201,8 +201,15 @@ footer > span {
         font-size: 2rem;
     }
 
-    .feature ul li {
+    .features > ul li {
         font-size: 1rem;
+        text-align: left;
+        list-style: none;
+        line-height: 2rem;
+    }
+
+    .features > ul > li b {
+        font-size: 1.2rem;
     }
 
     .about-container, .introduction, .vision, .the-problem, .features, .contact, .help {
@@ -212,9 +219,10 @@ footer > span {
         gap: .5rem;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 
-    .features-text > ul  > li {
-        text-decoration: none;
+    footer > span{
+        font-size: 1.3rem;
     }
 }
